# SolderingStation

./: .gitignore  .travis.yml  README.md
3D/: Hand.ipt  case_bottom.ipt  case_top.ipt  stand.ipt
Firmware/: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Dockerfile  Makefile  functions.cmake  solder.ioc  solder.xml  toolchain.cmake
Firmware/Inc/: AVG.h  Buffer.h  CLI.h  Encoder.h  HAL.h  HAL_LL_Init.h  Weller.h  cyclicBuffer.h  mxconstants.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Firmware/Libs/LCD/inc/: LCDTransaction.h  LCD_trans.h  defines.h  hd44780.h
Firmware/Libs/LCD/src/: LCD_trans.cpp  hd44780.cpp
Firmware/STM32F103/: .cproject  .project  LinkerScript.ld  Olimex-STM32-P103.cfg  olimex-stm32-p103.xml
Firmware/STM32F103/inc/: CLI.h  PWM.h
Firmware/STM32F103/inc/ADC/: ADC.h
Firmware/STM32F103/inc/Delay/: delay_ms.c  delay_ms.h
Firmware/STM32F103/inc/Encoder/: Encoder.h
Firmware/STM32F103/inc/GPIO/: GPIO.h
Firmware/STM32F103/inc/LCD/: LCD_trans.cpp  LCD_trans.h  defines.h  hd44780.cpp  hd44780.h
Firmware/STM32F103/inc/Menu/: screen.cpp  screen.h
Firmware/STM32F103/inc/UART/: uart.h
Firmware/STM32F103/inc/utils/: FIFO.h  FIR.h
Firmware/STM32F103/inc/weller/: pid.h  thermocouple.h  weller.cpp  weller.h
Firmware/STM32F103/src/: PC.h  main.cpp
Firmware/STM32F103/startup/: startup.s
Firmware/Src/: main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Firmware/core/: CMakeLists.txt  Com.cpp  Com.h  Controller.cpp  Controller.h  HAL.h  Thermocuple.h  Tip.cpp  Tip.h  Weller.h  com.cpp  com.h  commands.cpp  commands.h  config.h  core.cpp  core.h  display.cpp  display.h  encoder.cpp  encoder.h  pid.h  settings.h  sleepManager.cpp  sleepManager.h  stateManager.cpp  stateManager.h  storage.cpp  storage.h  tempSensor.cpp  tempSensor.h  timer.cpp  timer.h  tip.h
Firmware/core/storage/: base.h  layout.h  persistent_state.h  settings.cpp  settings.h  state.cpp  state.h  storage.cpp  storage.h
Firmware/libs/: AVG.h  ArrayHolder.h  ArrayView.h  Average.h  Buffer.h  CLI.cpp  CLI.h  CMakeLists.txt  LineDebounce.h  array_view.h  crc8.cpp  crc8.h  cyclicBuffer.h  reader.cpp  reader.h  writer.cpp  writer.h
Firmware/scripts/: Makefile  compile_arm.ps1  format.ps1  unit_tests.ps1
Firmware/targets/arm/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Encoder.h  HAL.h  HAL_LL_Init.h  STM32F103C8Tx_FLASH.ld  SolderingStation.cfg  SolderingStation.ioc  SolderingStation.xml  main.cpp  settings.cmake  toolchain.cmake
Firmware/targets/arm/Drivers/: CMakeLists.txt  allowed_warnings.cmake
Firmware/targets/arm/Inc/: CPPLINT.cfg  STM32_HAL.h  adc.h  core_support.h  encoder_hw.h  hardwareConfig.h  hd44780.h  i2c_memory.h  i2c_memory_struct.h  main.h  stm32f1xx_hal_conf.h  tim.h
Firmware/targets/arm/Libs/LCD/inc/: LCDTransaction.h  LCD_trans.h  defines.h  hd44780.h
Firmware/targets/arm/Src/: CPPLINT.cfg  HAL.cpp  MY_main.cpp  adc.c  coreSupport.cpp  encoder_hw.c  encoder_hw.cpp  gpio.c  hd44780.c  i2c_memory.cpp  iwdg.c  main.c  newlib.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
Firmware/targets/simulation/: HALsim.cpp  HALsim.h  Serial.cpp  Serial.h  main.cpp  plantModel.h
Firmware/targets/simulation-events/: HALsim.cpp  HALsim.h  main.cpp  plantModel.h
Firmware/targets/unitTests/: Average.cpp  CLI.cpp  CMakeLists.txt  Commands.cpp  Controller.cpp  HALmock.cpp  HALmock.h  PID.cpp  PIDforTip.cpp  array_view.cpp  plantModel.cpp  plantModel.h  settings.cmake  tempScaling.cpp  test.cpp
Firmware/targets/x86/: CMakeLists.txt  settings.cmake  toolchain.cmake
Firmware/targets/x86/simulation/: CMakeLists.txt  HALsim.cpp  HALsim.h  Serial.cpp  main.cpp  plantModel.h  socket.cpp  socket.h
Firmware/targets/x86/simulation-events/: HALsim.cpp  HALsim.h  main.cpp
Firmware/targets/x86/unitTests/: Average.cpp  CLI.cpp  CMakeLists.txt  Commands.cpp  Controller.cpp  HALmock.cpp  HALmock.h  LineDebounce.cpp  PID.cpp  PIDforTip.cpp  array_view.cpp  display.cpp  encoder.cpp  plantModel.cpp  plantModel.h  settings.cpp  state.cpp  state_manager.cpp  storage.cpp  tempScaling.cpp  test.cpp  timer.cpp  tip.cpp
Firmware/tests/: Average.cpp  CLI.cpp  Controller.cpp  PID.cpp  PIDforTip.cpp  plantModel.cpp  plantModel.h  tempScaling.cpp
Hardware/: Weller.DsnWrk
Hardware/MCP1416/: Mini.OutJob  Mini.PrjPcb  Mini.PrjPcbStructure  mini.PcbDoc  opamp.PcbDoc
Hardware/MCP6N16/: OpAmp.SchDoc  PCB1.PcbDoc  inst.OutJob  inst.PrjPcb  inst.PrjPcbStructure  inst.SchDoc  top.SchDoc  view.OutJob
Hardware/Main/: .gitignore  DBG.Harness  DBG.SchDoc  DGB.Harness  DGB.SchDoc  Encoder.Harness  Encoder.SchDoc  LCD.Harness  LCD.SchDoc  MCU.Harness  MCU.SchDoc  Main.DsnWrk  Memory.SchDoc  Show.OutJob  general OpAmp.SchDoc  main.PcbDoc  main.PcbDoc.htm  main.PrjPcb  main.PrjPcbStructure  mosfet.SchDoc  power.SchDoc  tipController.SchDoc  top.SchDoc  weller.SchDoc
Hardware/libs/: AMP-OPA-MCP6031-SOT5.SchLib  IN-MOSDRV-MCP1402-5.SchLib  IR Discrete MOSFET - Power.SchLib  MC-ARM-STM32F030-SQ48.SchLib  PM-REG-LD1117-SOT3.SchLib
Hardware/libs/footprints/: 0603.PcbLib  IR Discrete MOSFET - Power.PcbLib  LQFP48.PcbLib  SOT-23-5.PcbLib  TO-252_M.PcbLib  resistors.PcbLib
Software/: .gitignore
Software/LabVIEW_control/: .gitignore  SolderingStationController.lvproj  Weller.aliases  Weller.lvlps  Weller.lvproj  checkTimeout.vi  clear queues.vi  data.ctl  full command.vi  init queues.vi  main.vi  notifyError.vi  parse packet.vi  queue packet to transmit.vi  queues.ctl  rx queue.vi  states.ctl
Software/LabVIEW_control/HAL/: Init Device.vi  Tab Control.ctl  close device.vi  read data.vi  write data.vi
Software/LabVIEW_control/device/: close.vi  device.ctl  init.vi  read.vi  tx queue.vi  write.vi
Software/LabVIEW_control/typedefs/: device.ctl
Software/PyGUI/: ConnectToDevice.py  ConnectionManager.py  connection_serial.py  connection_socket.py  main.py  main_window.py  main_window.ui  requirements.txt
